--- a/application/src/main/resources/templates/login.html
+++ b/application/src/main/resources/templates/login.html
@@ -4,12 +4,10 @@
     <meta charset="utf=8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MB StarRewards</title>
-    <link href="webjars/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="webjars/jquery/3.0.0/jquery.min.js"></script>
-    <script src="webjars/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link href="webjars/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" />      
 </head>
 
-<body>
+<body class="bg-black">
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="row">
             <div class="col-md-12">
@@ -20,19 +18,20 @@
                     <div th:if="${param.logout}" class="alert alert-success" role="alert">You have been logged out.
                     </div>
                     <div class="form-group">
-                        <input type="text" id="username" name="username" class="form-control" placeholder="Username" />
+                        <input type="text" id="username" name="username" class="form-control mb-3" placeholder="Username" />
                     </div>
                     <div class="form-group">
-                        <input type="password" id="password" name="password" class="form-control"
+                        <input type="password" id="password" name="password" class="form-control mb-3"
                             placeholder="Password" />
                     </div>
-                    <div class="control-group">
-                        <button type="submit" class="btn btn-lg btn-primary btn-block">Log in</button>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary">Log in</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <script src="webjars/bootstrap/5.3.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
