--- a/application/src/main/resources/templates/login.html
+++ b/application/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
     <link href="webjars/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" />      
 </head>
 
-<body class="bg-black">
+<body class="bg-black text-light">
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="row">
             <div class="col-md-12">
