--- a/application/src/main/resources/templates/login.html
+++ b/application/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
                     <div th:if="${param.logout}" class="alert alert-success" role="alert">You have been logged out.
                     </div>
                     <div class="form-group">
-                        <input type="text" id="username" name="username" value="${username}" class="form-control mb-3" placeholder="Username" />
+                        <input type="text" id="username" name="username" th:value="${username}" class="form-control mb-3" placeholder="Username" />
                     </div>
                     <div class="form-group">
                         <input type="password" id="password" name="password" class="form-control mb-3"
