--- a/application/src/main/resources/static/css/app-fonts.css
+++ b/application/src/main/resources/static/css/app-fonts.css
@@ -10,3 +10,10 @@
     url('./fonts/SVG/DaimlerCAC-Regular.svg') format('svg');
     }
     
+    
+    .om-font-family {
+        font-family: "DaimlerCSArab-Regular"!important;
+    }
+    .om-font-family-dcacr {
+        font-family: "DaimlerCAC-Regular";
+    }
