--- a/application/src/main/resources/templates/login.html
+++ b/application/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>MB StarRewards</title>
     <link href="webjars/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet" />    
-    <link href="/app-fonts.css" rel="stylesheet"/>  
+    <link href="/css/app-fonts.css" rel="stylesheet"/>  
 </head>
 
 <body class="bg-black text-light">
